--- a/minesweeper/tsconfig.app.json
+++ b/minesweeper/tsconfig.app.json
@@ -23,5 +23,5 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src", "routes/main.tsx"]
+  "include": ["src", "src/main.tsx"]
 }
